Devops/Kubernetes/k8-02-08-2026/Worker Node/Ingress/netflix/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-ui-service
  labels:
    app: netflix-ui
spec:
  type: LoadBalancer
  selector:
    app: netflix-ui
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
