Devops/Kubernetes/k8-02-08-2026/Worker Node/Ingress/netflix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix-ingress
spec:
  ingressClassName: azure/application-gateway
  rules:
  - host: netflix.online.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: netflix-ui
            port:
              number: 80
